--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Z-AXIS Immigration</title>
+    <meta name="description" content="Expert Canadian Immigration Consultants" />
+    <meta name="author" content="Z-AXIS" />
+    <link rel="icon" type="image/png" href="/logo.png" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Z-AXIS Immigration" />
+    <meta property="og:description" content="Your trusted partner for Canadian immigration." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@zaxis" />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
 
   <body>
