--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <title>Z-AXIS Immigration</title>
     <meta name="description" content="Expert Canadian Immigration Consultants" />
     <meta name="author" content="Z-AXIS" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/jpeg" href="/logo.jpg" />
 
     <meta property="og:title" content="Z-AXIS Immigration" />
     <meta property="og:description" content="Your trusted partner for Canadian immigration." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="/logo.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@zaxis" />
-    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:image" content="/logo.jpg" />
   </head>
 
   <body>
