Fix auth race condition and update logo

--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Z-AXIS Immigration</title>
-    <meta name="description" content="Expert Canadian Immigration Consultants" />
-    <meta name="author" content="Z-AXIS" />
-    <link rel="icon" type="image/jpeg" href="/logo.jpg" />
 
-    <meta property="og:title" content="Z-AXIS Immigration" />
-    <meta property="og:description" content="Your trusted partner for Canadian immigration." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo.jpg" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Z-AXIS Immigration</title>
+  <meta name="description" content="Expert Canadian Immigration Consultants" />
+  <meta name="author" content="Z-AXIS" />
+  <link rel="icon" type="image/png" href="/logo.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@zaxis" />
-    <meta name="twitter:image" content="/logo.jpg" />
-  </head>
+  <meta property="og:title" content="Z-AXIS Immigration" />
+  <meta property="og:description" content="Your trusted partner for Canadian immigration." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/logo.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@zaxis" />
+  <meta name="twitter:image" content="/logo.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
