--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Z-AXIS Immigration</title>
   <meta name="description" content="Expert Canadian Immigration Consultants" />
   <meta name="author" content="Z-AXIS" />
-  <link rel="icon" type="image/png" href="/logo.png" />
+  <link rel="icon" type="image/png" href="/logo_nobg.png" />
 
   <meta property="og:title" content="Z-AXIS Immigration" />
   <meta property="og:description" content="Your trusted partner for Canadian immigration." />
